--- a/history.html
+++ b/history.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>History</title>
-        <link rel="stylesheet" href="history.css">
-        <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@400;700&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="history.css">
 
     </head>
     <body>
@@ -56,6 +57,7 @@
                 <div class="image-title">
                     <h3>Evolution of Design</h3>
                     <p class="description">Web design has evolved dramatically from simple, text-based layouts to intricate designs with animations, videos, and responsive elements. The late 1990s and early 2000s saw the rise of Flash, which allowed for rich multimedia content. However, the focus gradually shifted towards simplicity, usability, and accessibility, leading to the clean, minimalist designs popular today.</p>
+                    <p><a class="link-description" href="https://www.webfx.com/blog/web-design/the-evolution-of-web-design/" target="_blank">READ MORE</a></p>
                 </div>
                 <img src="/image/web.png" alt="">
             </div>
@@ -64,6 +66,7 @@
                 <div class="image-title">
                     <h3>The Rise of Web Standards</h3>
                     <p class="description">Web design has evolved dramatically from simple, text-based layouts to intricate designs with animations, videos, and responsive elements. The late 1990s and early 2000s saw the rise of Flash, which allowed for rich multimedia content. However, the focus gradually shifted towards simplicity, usability, and accessibility, leading to the clean, minimalist designs popular today.</p>
+                    <p><a class="link-description" href="https://americanprofessionguide.com/evolution-of-web-design/" target="_blank">READ MORE</a></p>
                 </div>
                 <img src="/image/standard.png" alt="">
             </div>
