--- a/technology.html
+++ b/technology.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Technology</title>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="technology.css">
         <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
     </head>
     <body>
         <header>
@@ -31,6 +31,7 @@
                 <div class="image-description">
                     <p class="description first-paragraph">Modern web development is powered by a rich ecosystem of technologies and tools that enable developers to create fast, secure, and scalable websites. This page explores the core technologies, popular frameworks, and essential tools that define today’s web development landscape. Developers utilize front-end and back-end frameworks to streamline the creation of dynamic user experiences. Additionally, tools like version control and continuous integration ensure smooth collaboration and deployment.
                     </p>
+                    <p><a class="top-bootstrap" href="https://www.webskitters.com/blog/15-web-development-trends" target="_blank">READ MORE</a></p>
                 </div>
                 <img src="/image/modern.png" alt="">
             </div>
@@ -53,10 +54,12 @@
                 <div class="terms-box">
                     <h4>Responsive Website</h4>
                     <p class="description terms-paragraph">In today’s mobile-first world, responsive design is crucial. Tools like Bootstrap and Foundation provide pre-built responsive components that speed up development. Additionally, CSS frameworks like Tailwind CSS offer a utility-first approach, giving developers complete control over the design while maintaining responsiveness.</p>
+                    <p><a class="link-description" href="https://slashdev.io/blog/the-ultimate-guide-to-responsive-web-design-in-2024" target="_blank">READ MORE</a></p>
                 </div>
                 <div class="terms-box terms-paragraph">
                     <h4>Tools and Environment</h4>
-                    <p class="description">Front-End Development involves using tools like Git/GitHub for version control, npm/Yarn for managing dependencies, Gulp/Grunt for automating tasks, and IDEs like Visual Studio Code for enhanced coding efficiency.</p>
+                    <p class="description terms-paragraph">Front-End Development involves using tools like Git/GitHub for version control, npm/Yarn for managing dependencies, Gulp/Grunt for automating tasks, and IDEs like Visual Studio Code for enhanced coding efficiency.Additionally, CSS frameworks like Tailwind CSS offer a utility-first approach, giving developers complete.</p>
+                    <p><a class="link-description" href="https://slashdev.io/blog/the-ultimate-guide-to-responsive-web-design-in-2024" target="_blank">READ MORE</a></p>
                 </div>
             </div>
         </section>
