--- a/Homepage.html
+++ b/Homepage.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Homepage</title>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="homepage.css">
         <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+        
     </head>
     <body>
         <header>
@@ -35,7 +36,7 @@
                     <div class="box">
                         <i class='bx bxs-user'></i>
                         <div class="inner-box">
-                            <h3>Front-end</h4>
+                            <h3>Front-end</h3>
                         </div>
                     </div>
                     <div class="meaning">
@@ -46,7 +47,7 @@
                     <div class="box">
                         <i class='bx bxs-user'></i>
                         <div class="inner-box">
-                            <h3>Back-End</h4>
+                            <h3>Back-End</h3>
                         </div>
                     </div>
                     <div class="meaning">
@@ -57,7 +58,7 @@
                     <div class="box">
                         <i class='bx bxs-user'></i>
                         <div class="inner-box">
-                            <h3>Full-Stack</h4>
+                            <h3>Full-Stack</h3>
                         </div>
                     </div>
                     <div class="meaning">
